<resources>
    <string name="app_name">HomeFinanceMobile</string>
    <string name="record_title">Записи</string>
    <string name="account_title">Счета</string>
    <string name="categories_title">Категории</string>
    <string name="daily_balance_title">Ежедневный остаток</string>
    <string name="setting_title">Настройки</string>
    <string name="setting_user_name">Имя пользователя</string>
    <string name="setting_dark_mode">Темная тема</string>
    <!-- Таблицы -->
    <string name="obj_name">Название</string>
    <string name="balance">Баланс</string>
    <string name="update_date">Дата обновления</string>
    <string name="table_header_amount">Сумма</string>
    <string name="table_header_category">Категория</string>
    <string name="table_header_account">Счет</string>
    <string name="table_header_date">Дата</string>
    <string name="table_header_balance">Остаток</string>
    <string name="table_header_total_balance">Общий остаток</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="add">Добавить</string>
    <string name="edit">Изменить</string>
    <string name="recordAddText">Добавление записи</string>

    <string name="income">Доход</string>
    <string name="expance">Расход</string>

    <!-- tags -->
    <string name="account_card">account_card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
