<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.dailybalance.DailyBalanceFragment">


    <LinearLayout
        android:id="@+id/totalBalanceFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/totalBalanceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/header_row"
            android:divider="@mipmap/header_divider"
            android:elevation="3dp"
            android:gravity="clip_vertical|top"
            android:orientation="horizontal"
            android:translationZ="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/table_header_account"
                android:textColor="@color/blackTextColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/table_header_balance"
                android:textColor="@color/blackTextColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/table_header_total_balance"
                android:textColor="@color/blackTextColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/table_header_date"
                android:textColor="@color/blackTextColor"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/totalBalanceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="auto_fit"
            android:visibility="visible" />
    </LinearLayout>

</FrameLayout>