<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/financeTable"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TableRow
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/row">

                <TextView
                    android:id="@+id/amountField"
                    android:layout_weight="1"
                    android:background="@mipmap/column"
                    android:gravity="center|center_horizontal"
                    android:text="@string/table_header_amount"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/categoryField"
                    android:layout_weight="1"
                    android:background="@mipmap/column"
                    android:gravity="center|center_horizontal"
                    android:text="@string/table_header_category"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/accountField"
                    android:layout_weight="1"
                    android:background="@mipmap/column"
                    android:gravity="center|center_horizontal"
                    android:text="@string/table_header_account"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date"
                    android:layout_weight="1"
                    android:background="@mipmap/column"
                    android:gravity="center|center_horizontal"
                    android:text="@string/table_header_date"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#FF541E"
            android:backgroundTint="#FF541E"
            android:clickable="true"
            app:backgroundTint="#FF5722"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@mipmap/add"
            app:useCompatPadding="false" />
    </android.support.constraint.ConstraintLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/main_menu"/>

</android.support.v4.widget.DrawerLayout>