<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RecordTableFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:id="@+id/financeTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TableRow
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@mipmap/header_row"
                android:divider="@mipmap/header_divider"
                android:elevation="3dp"
                android:gravity="clip_vertical|top"
                android:translationZ="3dp">

                <TextView
                    android:id="@+id/amountField"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/table_header_amount"
                    android:textColor="@color/blackTextColor"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/categoryField"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:paddingStart="8dp"
                    android:text="@string/table_header_category"
                    android:textColor="@color/blackTextColor"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/accountField"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:paddingStart="8dp"
                    android:text="@string/table_header_account"
                    android:textColor="@color/blackTextColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:paddingStart="8dp"
                    android:text="@string/table_header_date"
                    android:textColor="@color/blackTextColor"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </TableRow>

        </TableLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorSecond"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@id/financeTable"
            app:layout_constraintEnd_toEndOf="@id/financeTable"
            app:srcCompat="@mipmap/button_add"
            app:useCompatPadding="false" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>