<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form.RecordForm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="0"
                android:ems="10"
                android:hint="@string/table_header_amount"
                android:inputType="numberDecimal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amountFieldText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewStart"
                android:textDirection="ltr"
                app:helperText="@string/table_header_category"
                app:hintEnabled="true">

                <Spinner
                    android:id="@+id/categoryFieldSpinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:padding="0dp"
                    android:paddingHorizontal="0dp"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:spinnerMode="dialog" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/accountField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewStart"
                android:textDirection="ltr"
                app:helperText="@string/table_header_account"
                app:hintEnabled="true">

                <Spinner
                    android:id="@+id/accountFieldSpinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:padding="0dp"
                    android:paddingHorizontal="0dp"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:spinnerMode="dialog" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:autofillHints=""
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/table_header_date"
                    android:inputType="date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dateFieldText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/calendar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:background="@mipmap/calendar" />

            </LinearLayout>

            <Button
                android:id="@+id/createRecordBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="159dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:background="@color/colorSecond"
                android:text="@string/add"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>